--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/com/rzheng/excel/CustomsClearance.java=UTF-8
 encoding//src/main/java/com/rzheng/excel/CustomsDeclaration.java=UTF-8
 encoding//src/main/java/com/rzheng/excel/ProformaInvoice.java=UTF-8
 encoding//src/main/java/com/rzheng/excel/ShippingOrder.java=UTF-8
