--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@
 *.xlsx
 *.pdf
 *.csv
+*.png
+*.jpg
+*.doc
+*.docx
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
